--- a/.github/workflows/demo.yaml
+++ b/.github/workflows/demo.yaml
@@ -23,6 +23,7 @@ jobs:
 
   integration:
     runs-on: ubuntu-latest
+    continue-on-error: true
     steps:
       - run: echo "This is an integration step"
       - run: exit 1
